@startuml

title __LOGIN's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.login {
      class com.unisa.cinehub.views.login.LoginView {
          - login : LoginForm
          + LoginView()
          + beforeEnter()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.login {
      class com.unisa.cinehub.views.login.MiddleStepView {
          + MiddleStepView()
          + setParameter()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.login {
      class com.unisa.cinehub.views.login.RegisterView {
          - binder : Binder<Utente>
          + RegisterView()
          - createForm()
          - register()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.login {
      class com.unisa.cinehub.views.login.SuccessRegister {
          + SuccessRegister()
      }
    }
  }
  

  com.unisa.cinehub.views.login.LoginView .up.|> com.vaadin.flow.router.BeforeEnterObserver
  com.unisa.cinehub.views.login.LoginView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.login.MiddleStepView .up.|> com.vaadin.flow.router.HasUrlParameter
  com.unisa.cinehub.views.login.MiddleStepView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.login.RegisterView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.login.RegisterView o-- com.unisa.cinehub.control.UtenteControl : utenteControl
  com.unisa.cinehub.views.login.SuccessRegister -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
